# eldritch-matchness

./: .editorconfig  .gitignore  .ocamlformat  CLAUDE.md  DESIGN.md  dune-project  eldritch_matchness.opam
lib/: dice.ml  dune
test/: dune  test_dice.ml
